--- a/DemoASP/Areas/Admin/Views/Login/Login.cshtml
+++ b/DemoASP/Areas/Admin/Views/Login/Login.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Index";
 }
-@model DemoASP.Areas.Admin.Models.LoginModel
+@model DemoASP.Areas.Admin.Models.DangNhapModel
 @section Header{
     Thong Tin Dang Nhap
 }
@@ -36,24 +36,24 @@
                 @using (Html.BeginForm("Login", "Login", FormMethod.Post))
                 {
                     @Html.ValidationSummary(false, "", new { @class = "text-danger" });
-                <form role="form">
-                    <h3 class="text-center margin-xl-bottom">Welcome Back!</h3>
+                    <form role="form">
+                        <h3 class="text-center margin-xl-bottom">Welcome Back!</h3>
 
-                    <div class="form-group text-center">
-                        @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", @autofocus = "autofocus", @placeholder = "Name" })
-                    </div>
-                    <div class="form-group text-center">
-                        @Html.TextBoxFor(model => model.Password, new { @class = "form-control" })
+                        <div class="form-group text-center">
+                            @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", @autofocus = "autofocus", @placeholder = "Name" })
+                        </div>
+                        <div class="form-group text-center">
+                            @Html.TextBoxFor(model => model.Password, new { @class = "form-control" })
 
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            @Html.CheckBoxFor(model => model.RememberMe)
-                            Remember Me
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block btn-lg">SIGN IN</button>
-                </form>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                @Html.CheckBoxFor(model => model.RememberMe)
+                                Remember Me
+                            </label>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block btn-lg">SIGN IN</button>
+                    </form>
                 }
             </div>
             <div class="panel-body text-center">
