--- a/DemoASP/Areas/Admin/Views/Category/Index.cshtml
+++ b/DemoASP/Areas/Admin/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<Model.ModelView.ModelCategory>
+﻿@model PagedList.IPagedList<Model.ModelView.CategoryModel>
 @using PagedList.Mvc;
 
 @{
