--- a/DemoASP/Areas/Admin/Views/Order/Details.cshtml
+++ b/DemoASP/Areas/Admin/Views/Order/Details.cshtml
@@ -97,3 +97,71 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+<div class="col-md-4 col-sm-4">
+    <div class="panel panel-default panel-full">
+        <div class="panel-body">
+            <div class="">
+                <h3><a href="/admin/customers/43270">@Html.DisplayFor(model => model.Customer.Name)</a></h3>
+            </div>
+            <div class=""><hr></div>
+            <div class="update-order-shipping-address">
+                <div class="row">
+                    <div class="col-sm-9">
+                        Chưa có địa chỉ giao hàng
+                    </div>
+                    <div class="col-sm-3 row text-right">
+
+                    </div>
+                </div>
+            </div>
+            <div class="row"><hr></div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="panel-title no-margin-top margin-md-bottom">Địa chỉ thanh toán</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div>@Html.DisplayFor(model => model.Customer.Name)</div>
+                    <div>@Html.DisplayFor(model => model.CustomerPhoneNumber)</div>
+                    <div>@Html.DisplayFor(model => model.CustomerAddress)</div>
+                    <div>
+                        @Html.DisplayFor(model => model.CustomerAddress)
+                    </div>
+                </div>
+            </div>
+
+            <div class="row"><hr></div>
+            <div class="row update-order-email">
+                <div class="col-sm-1">
+                    <i class="fa-envelope fa fa-fw"></i>
+                </div>
+                <div class="col-sm-9"><div>@Html.DisplayFor(model => model.CustomerName)</div>
+               
+            </div>
+
+
+        </div>
+    </div>
+
+    <div class="panel panel-default panel-full">
+        <div class="panel-body">
+            <h3 class="panel-title no-margin-top margin-md-bottom">Chuyển đổi đơn hàng</h3>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div>Nguồn</div>
+                    <div class="bold">web</div>
+                </div>
+            </div>
+            <div class="row"><hr></div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div>Trang</div>
+                    <div><a href="/san-pham-test-2" target="_blank">/san-pham-test-2</a></div>
+                </div>
+            </div>
+            <div class="row"><hr></div>
+
+        </div>
+    </div>
+</div>
